--- a/src/SingleGame.css
+++ b/src/SingleGame.css
@@ -37,7 +37,7 @@
 .product-img img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     user-select: none;
 }
 
@@ -65,7 +65,7 @@
 
 .singleName{
     font-family: 'dosis';
-    font-size: 50px;
+    font-size: 30px;
     text-transform: capitalize;
 }
 
@@ -76,7 +76,7 @@
 }
 
 .singlePrice{
-    font-size: 50px;
+    font-size: 30px;
     font-weight: 100;
     margin-bottom: 20px;
 }
