--- a/src/SingleGame.css
+++ b/src/SingleGame.css
@@ -89,3 +89,79 @@
 .btn:hover{
     background-color: #eedbaf;
 }
+
+/* body {
+    text-align: center;
+    background: black;
+    margin: 0;
+  } */
+  
+  .heart-wrapper {
+    /* position: absolute; */
+    top: 50%;
+    left: 0;
+    width: 100%;
+    margin-top: 1.3rem;
+    margin-left: 5rem;
+    font-size: 5px;
+  }
+  
+  .heart {
+    /* display: inline-block; */
+    width: 1em;
+    height: 1em;
+    margin: 0 7em;
+    background: #a52a21;
+    box-shadow:
+      /* white shine */
+      0 -2em 0 white,
+      -3em 0 0 white,
+      -2em -1em 0 white,
+      /* top shades */
+      0 -1em 0 0 #c52317,
+      -1em -2em 0 0 #c52317,
+      -2em -2em 0 0 #c52317,
+      -3em -2em 0 0 #c52317,
+      1em -2em 0 0 #c52317,
+      2em -2em 0 0 #c52317,
+      3em -2em 0 0 #c52317,
+      -4em -1em 0 0 #c52317,
+      4em -1em 0 0 #c52317,
+      /* fills my heart */
+      0 0 0 2em #a52a21,
+      -1em 0 0 2em #a52a21,
+      1em 0 0 2em #a52a21,
+      -3em 0 0 1em #a52a21,
+      3em 0 0 1em #a52a21,
+      0 1em 0 2em #a52a21,
+      0 3em 0 1em #a52a21,
+      0 5em 0 0 #a52a21,
+      /* white borders */
+      -2em -2em 0 1em white,
+      2em -2em 0 1em white,
+      -3em -1em 0 1em white,
+      3em -1em 0 1em white,
+      -4em 0 0 1em white,
+      4em 0 0 1em white,
+      -3em 1em 0 1em white,
+      3em 1em 0 1em white,
+      1em 1em 0 2em white,
+      -1em 1em 0 2em white,
+      0 2em 0 2em white,
+      0 4em 0 1em white,
+      0 6em 0 0 white;  
+    }
+
+    .heart-wrapper:active {
+    animation: pulse .5s ease infinite;
+    }
+    
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.2); }
+    100% { transform: scale(1); }
+}
+
+  .heart-cart {
+    display: flex;
+  }
