added profile picture functionality.  Fixed hook in user model.  Fixed logout bug where token was not being cleared.

--- a/src/index.css
+++ b/src/index.css
@@ -98,8 +98,8 @@ body {
     white-space: nowrap !important;
   }
   
-  .scroll-lock {
+  /* .scroll-lock {
     overflow: hidden;
     margin-right: 17px;
-  }
+  } */
   
