--- a/src/SingleGame.css
+++ b/src/SingleGame.css
@@ -4,16 +4,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 .singleGame {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
     margin-top: 7rem;
+    margin: 10rem;
 }
 
 .product{
-    position: relative;
+    /* position: relative; */
     width: 1000px;
     min-width: 350px;
     min-height: 500px;
@@ -22,7 +24,6 @@
     justify-content: center;
     align-items: center;
 }
-
 
 .product-img{
     width: 40%;
@@ -41,7 +42,7 @@
     user-select: none;
 }
 
-.productlisting{
+ .productlisting{
     width: 60%;
     min-height: 500px;
     height: auto;
@@ -53,7 +54,7 @@
     opacity: 0;
     transform: translateY(50px);
     animation: fade-in 1s forwards 1;
-}
+} 
 
 @keyframes fade-in{
     100%{
@@ -89,3 +90,92 @@
 .btn:hover{
     background-color: #eedbaf;
 }
+
+/* body {
+    text-align: center;
+    background: black;
+    margin: 0;
+  } */ 
+  
+   .heart-wrapper {
+    /* position: absolute; */
+    /* top: 50%; */
+    left: 0;
+    /* width: 100%; */
+    margin-top: 1.3rem;
+    margin-left: 5rem;
+    font-size: 5px;
+  }
+  
+  .heart {
+    /* display: inline-block; */
+    width: 1em;
+    height: 1em;
+    margin: 0 7em;
+    background: #a52a21;
+    box-shadow:
+      /* white shine */
+      0 -2em 0 white,
+      -3em 0 0 white,
+      -2em -1em 0 white,
+      /* top shades */
+      0 -1em 0 0 #c52317,
+      -1em -2em 0 0 #c52317,
+      -2em -2em 0 0 #c52317,
+      -3em -2em 0 0 #c52317,
+      1em -2em 0 0 #c52317,
+      2em -2em 0 0 #c52317,
+      3em -2em 0 0 #c52317,
+      -4em -1em 0 0 #c52317,
+      4em -1em 0 0 #c52317,
+      /* fills my heart */
+      0 0 0 2em #a52a21,
+      -1em 0 0 2em #a52a21,
+      1em 0 0 2em #a52a21,
+      -3em 0 0 1em #a52a21,
+      3em 0 0 1em #a52a21,
+      0 1em 0 2em #a52a21,
+      0 3em 0 1em #a52a21,
+      0 5em 0 0 #a52a21,
+      /* white borders */
+      -2em -2em 0 1em white,
+      2em -2em 0 1em white,
+      -3em -1em 0 1em white,
+      3em -1em 0 1em white,
+      -4em 0 0 1em white,
+      4em 0 0 1em white,
+      -3em 1em 0 1em white,
+      3em 1em 0 1em white,
+      1em 1em 0 2em white,
+      -1em 1em 0 2em white,
+      0 2em 0 2em white,
+      0 4em 0 1em white,
+      0 6em 0 0 white;  
+    }
+
+    .heart-wrapper:active {
+    animation: pulse .5s ease infinite;
+    }
+    
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.2); }
+    100% { transform: scale(1); }
+}
+
+  .heart-cart {
+    display: flex;
+  }
+
+  .price-condition {
+    display: flex;
+    align-items: center;
+  }
+
+  .condition {
+    padding: 1rem;
+    padding-bottom: 2.5rem;
+    padding-left: 2rem;
+  }
+
+  
