--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -1,9 +1,10 @@
 
-
-
-
 * {
-    box-sizing: border-box; }
+    box-sizing: border-box; 
+  }
+  .row {
+    height: 90%
+  }
   
   .wrapper {
     padding: 2rem;
