--- a/src/Cart.css
+++ b/src/Cart.css
@@ -56,8 +56,7 @@
     cursor: pointer;
 }
 
-.Checkout {
-    width: 100%;
-    margin-top: 20;
+.cart-price {
+    margin-top: 10px;
+    color: #648caf;
 }
-
