add back button to single game component + fix duplicate game error + fix empty game cover error

--- a/src/ProductPages/SingleGame.css
+++ b/src/ProductPages/SingleGame.css
@@ -187,4 +187,10 @@
     padding-left: 2rem;
   }
 
+  .release-date{
+    padding: 1rem;
+    padding-bottom: 2.5rem;
+    padding-left: 2rem;
+  }
+
   
