--- a/src/Nav.css
+++ b/src/Nav.css
@@ -2,23 +2,22 @@
     padding-left: 2rem;
     overflow: hidden;
     background-color: black;
-    color: white
+    color: white;
+    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+    border-radius:10px;
   }
   
   .topnav a {
     float: left;
-    color: black;
     text-align: center;
     padding: 14px 16px;
     /* padding-bottom: 2rem; */
     text-decoration: none;
     text-transform: uppercase;
-    font-style: italic;
-    font-family: "Avenir Next", sans-serif;
-    border-radius: 25px;
-
-    font-weight: 900;
-    color: white
+    font-family:'Silkscreen', regular;
+    font-weight: bold;
+    color: white;
+   
   }
 
   /* topnav a:hover {
@@ -39,26 +38,26 @@
     font-size: 90px;
     text-align: center;
   z-index: 1;
-  /* border: 2px solid red; */
   margin-top: 0px;
+  color: white;
   object-fit: cover;
-
+  font-family:'Silkscreen', regular;
   }
+ 
   
  .img {
     /* background-image:url('https://blog.lootcrate.com/wp-content/uploads/2018/02/pacman_ghosts_header.gif');     */
     width: 120px;
     height: auto;
     z-index: -1;
- 
-  } 
+  }  
 
   .dropdown {
     position: relative;
     display: inline-block;
     z-index: 1;
-    /* border: 1px solid green; */
     text-align: center;
+
   }
   .dropbtn:hover {
     border: 1px solid;
@@ -66,6 +65,7 @@
     outline-color: rgba(255, 255, 255, 0);
     outline-offset: 15px;
     text-shadow: 1px 1px 2px #427388; 
+    border-radius:10px;
  
   }
   
@@ -79,6 +79,8 @@
     z-index: 1;
     padding: 0;
     /* border: 2px solid red; */
+    border-radius:10px;
+
 flex-direction: column;
 }
   
@@ -120,3 +122,40 @@ border: 2px solid red;
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
+
+ .glyphicon-log-out {
+color: black
+}
+
+ .searchbar {
+  margin: auto;
+padding: 5px;
+  background-color:black;
+  border-radius:10px;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+ position: relative;
+ right: 10px;
+ top: 9px;
+ font-family:'Silkscreen', regular;
+} 
+
+.logout {
+  margin: auto;
+padding: 5px;
+  background-color:black;
+  border-radius:10px;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+ position: relative;
+ right: 10px;
+ /* top: 9px; */
+ bottom: 2px;
+ font-family:'Silkscreen', regular;
+}
+
+.logout:hover {
+  border: 1px solid;
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+    outline-color: rgba(255, 255, 255, 0);
+    outline-offset: 15px;
+    text-shadow: 1px 1px 2px #427388; 
+}
