--- a/src/ProductPages/SingleGame.css
+++ b/src/ProductPages/SingleGame.css
@@ -86,19 +86,26 @@
 }
 
 .btn{
-    background: #eae3d2;
-    color: #292929;
-    border: none;
+    color: white;
+    border: white;
     text-transform: capitalize;
     font-size: 16px;
     padding: 10px 20px;
     cursor: pointer;
     margin-bottom: 2rem;
+    font-family:'Silkscreen', regular;
+    background-color:black;
+  border-radius:10px;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+
 }
 
 .btn:hover{
-    background-color: #eedbaf;
-}
+    border: 1px solid;
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+    outline-color: rgba(255, 255, 255, 0);
+    outline-offset: 15px;
+    text-shadow: 1px 1px 2px #427388; }
 
 /* body {
     text-align: center;
@@ -193,4 +200,3 @@
     padding-left: 2rem;
   }
 
-  
