--- a/src/index.css
+++ b/src/index.css
@@ -45,11 +45,22 @@
     width: 100%;
     height: 100%;
     padding: 2.5em 1.5em 1.5em 1.5em;
-    background-color: #ffffff;
+    background: linear-gradient(45deg,red, blue);
     box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-  }
+    font-family:'Silkscreen', regular;
+text-align: center;
+   border: 0.2rem solid #fff; 
+  border-radius: 2rem; 
+  /*padding: 0.4em;*/
+  box-shadow: 0 0 .2rem #fff,
+            0 0 .2rem #fff,
+            0 0 2rem blue,
+            0 0 0.8rem red,
+            0 0 2.8rem red,
+            inset 0 0 1.3rem ;  
+}
   
   @media screen and (min-width: 500px) {
     /* Center the Modal! */
@@ -58,7 +69,7 @@
       top: 50%;
       height: auto;
       transform: translate(-50%, -50%);
-      max-width: 30em;
+      max-width: 35em;
       max-height: calc(100% - 1em);
     }
   }
@@ -69,23 +80,24 @@
     right: 0;
     padding: 0.5em;
     line-height: 1;
-    background: #f6f6f7;
-    border: 0;
-    box-shadow: 0;
+    background: blue;
+    /* border: 0;
+    box-shadow: 0; */
     cursor: pointer;
   }
   
   ._modal-close-icon {
     width: 25px;
     height: 25px;
-    fill: transparent;
-    stroke: black;
-    stroke-linecap: round;
-    stroke-width: 2;
+    /* fill: transparent; */
+    stroke: white;
+    /* stroke-linecap: round; */
+    /* stroke-width: 2; */
   }
   
   .modal-body {
-    padding-top: 0.25em;
+    padding-top: 0.9em;
+
   }
   ._hide-visual {
     border: 0 !important;
@@ -99,25 +111,91 @@
     white-space: nowrap !important;
   }
   .github_logo{
-    fill: white;
+    fill: black;
   }
   .github_button{
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 85%;
+    width: 75%;
     text-align: center;
     align-items:center; 
-    min-height:40px;
-    background-color:#24292e; 
+    min-height:25px;
+    /* background-color:#24292e;  */
     font-size:14px; 
-    color:white; 
+    color:black; 
     text-decoration:none;
-    padding:8px 12px 8px 0px;
+    background-color: white;
+    position: relative;
+bottom: 10px;
+padding: 5px
+
+
   }
   
   /* .scroll-lock {
     overflow: hidden;
     margin-right: 17px;
   } */
-  
+  .login {
+    position: relative;
+    bottom: 30px;
+  width: 100px;
+margin-left: auto;
+margin-right: auto;  
+background-color: white;
+padding: 5px
+} 
+.adminlogin {
+  position: relative;
+    bottom: 20px;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;  
+  background-color: white;
+  padding: 5px
+
+}  
+.username {
+  font-size: 20px;
+  position: relative;
+  color: white;
+bottom: 25px;
+}
+input[name=username] {
+  color: black
+}
+input[type=password] {
+  color: black
+}
+input[name=email] {
+  color: black
+}
+.alreadyuser {
+
+  color: black;
+  padding: 5px;
+  background-color: white;
+  top: 15px;
+  position: relative;
+
+
+}
+
+.createuser{
+  color: black;
+  padding: 5px;
+  background-color: white;
+  width: 160px;
+  position: relative;
+  bottom: 20px;
+  left: 130px
+
+}
+.signup {
+  font-size: 35px;
+  font-weight: bold;
+  color: white
+}
+.reset-password{
+font: 50px}
