--- a/src/Nav.css
+++ b/src/Nav.css
@@ -4,7 +4,6 @@
     background-color: black;
     color: white;
     box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
-    border-radius:10px;
   }
   
   .topnav a {
@@ -42,6 +41,7 @@
   color: white;
   object-fit: cover;
   font-family:'Silkscreen', regular;
+  height: 250px
   }
  
   
@@ -93,7 +93,7 @@ flex-direction: column;
     text-align: center;
     min-width: 100px;
     text-align: center ;
-    font-size: 15px
+    font-size: 15px;
   }
 
   .dropdown-content ul {
@@ -107,11 +107,7 @@ text-align: center ;
     /* font-size: 10px; */
     border: none;
   }
-  .a{
-float: left;
-border: 2px solid red;
-
-  }
+  
 
   .dropdown-content a:hover  {
     transform: rotate(0deg) skew(0deg) translate(0, -10px);
@@ -135,7 +131,8 @@ padding: 5px;
  position: relative;
  bottom: 15px;
  font-family:'Silkscreen', regular;
- color: white
+ color: white;
+ left: 8px
 } 
 
 .logout {
@@ -160,7 +157,6 @@ padding: 5px;
 }
 
 .signIn {
-  border: 2px red;
   border-radius: 25px;
 }
 
