--- a/src/dropdownPage/dropdownSingle.css
+++ b/src/dropdownPage/dropdownSingle.css
@@ -1,8 +1,3 @@
-.wrapper  {
-flex-wrap: wrap;
-display: column;
-width: auto;
-margin-left: 10px;
-margin-right: 10px
-
+.wrapper {
+    margin: auto;
 }
