--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,13 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     box-sizing: border-box;
-
+background-color: black
   }
-   *,
+   /* *,
   *:before,
   *:after {
     box-sizing: inherit;
-  }
+  } */
   ol{
     list-style-type: none;
   }
@@ -170,6 +170,24 @@ input[type=password] {
 }
 input[name=email] {
   color: black
+}
+
+.adminc{
+  color: white;
+  font-size: 25px;
+}
+
+.adminbutton{
+padding:10px;
+position: relative;
+top: 15px
+}
+
+.adminbutton:hover {
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  text-shadow: 1px 1px 2px #427388; 
 }
 .alreadyuser {
 
