--- a/src/Account/MyAccount.css
+++ b/src/Account/MyAccount.css
@@ -7,15 +7,23 @@
 h1.profilename {
     color: white;
     font-weight: bold;
-    font-size: 40px;
-
-
+    font-size: 45px;
+    color: #fff;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #bc13fe,
+      0 0 82px #bc13fe,
+      0 0 92px #bc13fe,
+      0 0 102px #bc13fe,
+      0 0 151px #bc13fe;
 }
 
 h3.userdetails {
     color: white;
-    font-size: 30px;
-    padding: 10px
+    font-size: 35px;
+    padding: 15px
 
 }
 
@@ -35,6 +43,16 @@ top:10px;
   }
 
   .wishlista {
-    font-size:25px;
-
+    font-size:35px;
+padding: 20px;
+color: #fff;
+text-shadow:
+  0 0 7px #fff,
+  0 0 10px #fff,
+  0 0 21px #fff,
+  0 0 42px #bc13fe,
+  0 0 82px #bc13fe,
+  0 0 92px #bc13fe,
+  0 0 102px #bc13fe,
+  0 0 151px #bc13fe;
   }
