--- a/src/Cart.css
+++ b/src/Cart.css
@@ -33,14 +33,14 @@ padding: 20px;
 
 }
 
-.cart-name {
+.cart-name1{
     font-size: 18px;
     font-weight: 600;
     color: white;
 
 }
 
-.cart-desc {
+.cart-desc1 {
     font-size: 14px;
     color: white;
 }
