--- a/src/Account/Admin.css
+++ b/src/Account/Admin.css
@@ -28,6 +28,8 @@ th {
     padding: 3rem;
     padding-left: 10rem;
     padding-right: 10rem;
+    color: white;
+
 }
 
 td {
@@ -36,6 +38,8 @@ td {
     padding: 1.5rem;
     padding-left: 5rem;
     padding-right: 5rem;
+    color: white;
+
 }
 
 h1.adminname {
@@ -44,8 +48,18 @@ h1.adminname {
 position: relative;
 top:10px;
     font-weight: bold;
-   
-}
+    color: #fff;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #bc13fe,
+      0 0 82px #bc13fe,
+      0 0 92px #bc13fe,
+      0 0 102px #bc13fe,
+      0 0 151px #bc13fe;
+  }
+
 
 
 h3.admindetails {
@@ -58,12 +72,16 @@ font-weight: bold;
 
 .eacz {
 font-size:25px;
+color: white;
+
 }
 
 .editadmin{
     font-size:25px;
 background-color: black;
 border-radius: 15px;
+color: white;
+
 }
 .editadmin:hover {
     box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
@@ -76,6 +94,17 @@ border-radius: 15px;
     font-size: 30px;
     padding: 25px;
     font-weight: bold;
+    color: white;
+    color: #fff;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #bc13fe,
+      0 0 82px #bc13fe,
+      0 0 92px #bc13fe,
+      0 0 102px #bc13fe,
+      0 0 151px #bc13fe;
 }
 
 h3.admintools {
@@ -83,6 +112,16 @@ h3.admintools {
     padding: 40px;
 font-size: 30px;
 font-weight: bold;
+color: #fff;
+text-shadow:
+  0 0 7px #fff,
+  0 0 10px #fff,
+  0 0 21px #fff,
+  0 0 42px #bc13fe,
+  0 0 82px #bc13fe,
+  0 0 92px #bc13fe,
+  0 0 102px #bc13fe,
+  0 0 151px #bc13fe;
 }
 
 h4.admintools1 {
@@ -95,7 +134,6 @@ bottom:20px;
 
 .createadmin{
     font-size:25px;
-    background-color: purple;
     border-radius: 15px;
 }
 
