--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -89,4 +89,7 @@
           background: #536B78;
           color: white; }
     
-    
+          .add2 {
+            font-family:'Silkscreen', regular;
+           
+          }
