--- a/src/ProductPages/SingleGame.css
+++ b/src/ProductPages/SingleGame.css
@@ -85,8 +85,8 @@
     margin-bottom: 20px;
 }
 
-.btn{
-    color: white;
+.btn1{
+    color: black;
     border: white;
     text-transform: capitalize;
     font-size: 16px;
@@ -94,7 +94,6 @@
     cursor: pointer;
     margin-bottom: 2rem;
     font-family:'Silkscreen', regular;
-    background-color:black;
   border-radius:10px;
   box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
 
